--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
   "homepage": "https://github.com/NguyenTienDung181059/Blog#readme",
   "dependencies": {
     "express": "^4.17.1",
-    "express-handlebars": "^5.3.4"
+    "express-handlebars": "^5.3.4",
+    "mongoose": "^6.0.12"
   },
   "devDependencies": {
     "husky": "^7.0.2",
     "lint-staged": "^11.2.3",
+    "mongoose-slug-generator": "^1.0.4",
     "morgan": "^1.10.0",
     "node-sass": "^6.0.1",
     "nodemon": "^2.0.13",
